# advent-of-code

./: Cargo.toml
2021/day_1/part_1/: data.py  main.py
2021/day_1/part_2/: main.py
2021/day_2/part_1/: main.py
2021/day_2/part_2/: data.py
src/: main.rs
src/2021/day_3/: data.rs
src/2021/day_3/part_1/: data.rs  main.rs
src/2021/day_3/part_2/: main.py  main.rs
src/year_2021/: mod.rs
src/year_2021/day_3/: part_1.rs  part_2.rs
src/year_2021/day_4/: data.rs  mod.rs  part_1.rs  part_2.rs
