[package]
name = "advent_of_code"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

#[lib]
#name = "year_2021"
#path = "src/year_2021/mod.rs"

#[day_4]
#name = "day_four"
#path = "src/2021/day_4/data.rs"

[[bin]]
name = "main"
path = "src/year_2021/day_4/part_1.rs"
